tests/valid/interface-definition.nyx
interface Drawable:
    fn draw() -> ok
    fn clear() -> ok
