tests/invalid/interface-inconsistent-methods.nyx
interface Handler[T]:
    fn process(data: T) -> ok
   fn validate(data: T) -> bool
    fn cleanup() -> ok
